# project_arcana

./: .gitignore  DEF_AST.py  Readme.md  arcana.py  arcana_v02.py  debug.py  lexer.py  main.arkhe  parser.py  pyproject.toml  sample.arkhe  transpiler.py  日本語解説.md
examples/: cantus_test.arkhe  catalogus_test.arkhe  figura_test.arkhe  ordinata_test.arkhe  sample.arkhe  sample2.arkhe  sample3.arkhe  sample_v01.arkhe  variables.arkhe
junks/: _arcana.py  arcana.py  arcana_patched_v2.py  ast.py  basics.py  fizzbuzz_ast  graph.py  parser.py  test.py
src/arcana/: ast.py  cli.py  error.py  lexer.py  parser.py  pipeline.py  semantic.py  transpiler.py
src/arcana/loadingfunc/: loading.py
test/: check.txt
