[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arcana"
version = "0.2.0"
description = "Arcana language transpiler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Yusuke" }
]

dependencies = [
]

[project.scripts]
arcana = "arcana.cli:main"
